--- a/USER/Insulator_Robot.uvprojx
+++ b/USER/Insulator_Robot.uvprojx
@@ -445,6 +445,21 @@
               <FileType>1</FileType>
               <FilePath>.\pid.c</FilePath>
             </File>
+            <File>
+              <FileName>chassispid.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\chassispid.c</FilePath>
+            </File>
+            <File>
+              <FileName>Control.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Control.c</FilePath>
+            </File>
+            <File>
+              <FileName>timer7.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\timer7.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
