--- a/USER/Insulator_Robot.uvprojx
+++ b/USER/Insulator_Robot.uvprojx
@@ -460,6 +460,11 @@
               <FileType>1</FileType>
               <FilePath>.\timer7.c</FilePath>
             </File>
+            <File>
+              <FileName>encoder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\encoder.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
